[metadata]
name = irbempy
version = 0.0.1
url=https://github.com/mshumko/irbempy
author=Mykhaylo Shumko
author_email=msshumko@gmail.com
description = Python wrapper for the IRBEM-lib
long_description = file: README.md 
long_description_content_type = text/markdown
licence_file = LICENSE
keywords = IRBEM, magnetic field, field line tracing, magnetosphere, ephemeris
license = GNU GENERAL PUBLIC LICENSE v3.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires = 
    wheel
    numpy
#     beautifulsoup4
#     requests
#     numpy
#     scipy
#     pandas
#     matplotlib
#     cdflib>=0.3.20
#     ffmpeg-python
#     pymap3d
#     aacgm2